Clone completed